update master pack

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "gatsby-transformer-remark": "^2.8.17",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.0.0"
   }
 }
