deploy: 995bd0a8deaea7b446b23766bb02c2339fd599ba

--- a/icons-0e413a9655688a4271b293d3bc6d977a/manifest.json
+++ b/icons-0e413a9655688a4271b293d3bc6d977a/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "gatsby-starter-digital-garden",
-  "short_name": "gatsby-starter-digital-garden",
+  "name": "foam",
+  "short_name": "foam",
   "description": null,
   "dir": "auto",
   "lang": "en-US",
