--- a/_layouts/package.json
+++ b/_layouts/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "gatsby": "^2.23.18",
     "gatsby-plugin-favicon": "^3.1.6",
+    "gatsby-remark-twitter-cards": "^0.6.1",
     "gatsby-theme-garden": "^0.1.28",
+    "gatsby-transformer-remark": "^2.13.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1"
   },
