--- a/_layouts/package.json
+++ b/_layouts/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "gatsby": "^2.23.18",
     "gatsby-plugin-favicon": "^3.1.6",
+    "gatsby-remark-smartypants": "^2.7.0",
     "gatsby-remark-twitter-cards": "^0.6.1",
     "gatsby-theme-garden": "^0.1.28",
     "gatsby-transformer-remark": "^2.13.0",
